13043 HPET config register does not change size Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Robert Mustacchi <rm@fingolfin.org>